# gema

./: .gitignore  README.md  README_FASTRTC.md  agent.py  api.py  app.py  app_data_collection.py  benchmark_csm_rtf.py  benchmark_csm_streaming.py  calendar_client.py  config.py  csm_generator.py  fix-torch-compile.bat  generator.py  hf_login.bat  lllm_check.py  llm_check.py  llm_interface.py  loadandmergecheckpoint.py  lora.py  main.py  model_handler.py  models.py  new.xml  push_to_hf.py  pyproject.toml  rag_system.py  requirements.txt  ride_booking_client.py  run-win.bat  run_agent.py  run_api.py  run_csm.py  run_csm_gradio.py  serve_static.py  setup.py  speech_to_speech.py  sudo su && README.md  test.py  test_agent.py  (+15 more)
.github/: FUNDING.yml
Docker/: Dockerfile  docker-compose.yaml  docker-compose.yml  env
api/: authentication.py
api/helpers/: speech.py
api/routes/: health.py  speech.py
apis/: create_assistant.http  get_assistant.http  put_assistant.http  test.http
collected_audio/: .gitkeep
csm/: README.md
csm/client/: streaming_gradio_interface.py
csm/server/: main.py
finetuned_model/: config.json
static/: app.js  audio-test.html  audioProcessor.js  chat.js  crud.js  csm-interface.html  index.html
templates/: chat.html  crud.html  index.html  recorder.html  setup.html
