[project]
name = "csm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==0.28.1",
    "moshi==0.2.2",
    "silentcipher",
    "tokenizers==0.21.0",
    "torch==2.4.0",
    "torchao==0.9.0",
    "torchaudio==2.4.0",
    "torchtune==0.4.0",
    "transformers==4.49.0",
    "triton~=3.0.0; sys_platform != 'win32'",
    "triton-windows>=3.0.0,<4.0.0; sys_platform == 'win32'",
]

[tool.uv.sources]
silentcipher = { git = "https://github.com/SesameAILabs/silentcipher", rev = "master" }
